# PWR-SAD-LABS

./: .gitignore
Lab2/notebooks/: intro.ipynb
Lab3/: README.md  pyproject.toml  setup.sh  setup_umap.sh
Lab3/notebooks/: lab3-geopandas.ipynb  lab3-shap.ipynb  lab3-tsne-umap.ipynb  lab3-tsne.ipynb  lab3-umap.ipynb  lab3_eda_clustering.ipynb
Lab3/umap_env/: pyproject.toml
Lab4/: README.md  pyproject.toml  setup.sh
Lab4/notebooks/: lab4_regression_classification.ipynb  lab4_thresholds_metrics.ipynb
Lab5/: README.md  pyproject.toml  setup.sh
Lab5/notebooks/: lab5_hypothesis_verification.ipynb
Lab6/: README.md  pyproject.toml  setup.sh
Lab6/notebooks/: Untitled.ipynb  lab6_from_insights_to_models.ipynb
dane/: Matura - statystyki - E8 - szkoły (aktualizacja 07.2025).xlsx
