[project]
name = "sad-lab3"
version = "0.1.0"
description = "Laboratorium 3: EDA, klasteryzacja i redukcja wymiarów"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.0",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.9.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.0",
]

[tool.uv]
package = false
