[project]
name = "sad-lab4"
version = "0.1.0"
description = "Laboratorium 4: Intro do modelowania statystycznego"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.4.0",
    "matplotlib>=3.9.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.0",
]

[tool.uv]
package = false
