[project]
name = "lab6"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "jupyterlab>=4.5.6",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "aif360>=0.2.2",
    "pytest>=9.0.0",
]
